<resources>
    <string name="app_name">Egypt Sand</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="gameOver">Game Over</string>
    <string name="restart">Restart</string>
    <string name="info">By dragging the puzzles, collect the picture</string>
    <string name="music">Music</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>