<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectBackgroundActivity"
    android:background="@drawable/bg1">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin"
        android:textSize="@dimen/textSize"
        android:textColor="@color/white"
        android:layout_below="@+id/back"
        android:text="@string/info"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/margin"/>


   <ImageView
       android:layout_below="@+id/text"
       android:id="@+id/img"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:adjustViewBounds="true"
       android:src="@drawable/puzzle"
       android:layout_centerInParent="true"
       android:layout_margin="@dimen/margin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin"
        android:layout_centerHorizontal="true"
        android:text="@string/play"/>

</RelativeLayout>