<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/bg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/title"
            android:adjustViewBounds="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/margin"
            android:id="@+id/settings"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/margin"
            android:id="@+id/exit"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize"/>
    </LinearLayout>

</RelativeLayout>